@@ -418,7 +418,11 @@ v8::Local<v8::String> v8ExternalString(const String& string)
     StringCache& stringCache = getStringCache();
     v8::String* cachedV8String = stringCache.get(stringImpl);
     if (cachedV8String)
-        return v8::Local<v8::String>::New(v8::Handle<v8::String>(cachedV8String));
+    {
+        v8::Persistent<v8::String> handle(cachedV8String);
+        if (!handle.IsNearDeath() && !handle.IsEmpty())
+            return v8::Local<v8::String>::New(handle);
+    }
 
     v8::Local<v8::String> newString = makeExternalString(string);
     if (newString.IsEmpty())
